<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.setting.SettingActivity">

    <data>

        <variable
            name="option"
            type="com.yueban.yopic.data.model.util.WallpaperSwitchOptionObservable"/>

        <import type="android.os.Build"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/auto_switch_wallpaper"
                style="@style/Text.Label.Dark.Setting"/>

            <LinearLayout
                android:id="@+id/layout_wallpaper_enabled"
                android:enabled="@{option!=null}"
                android:orientation="horizontal"
                style="@style/Layout_Item_Setting">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/enabled"
                    style="@style/Text.Title.Dark.Setting"/>

                <Switch
                    android:id="@+id/sw_wallpaper_enabled"
                    android:checked="@={option.enabled}"
                    android:enabled="@{option!=null}"
                    style="@style/Switch.UnClick"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wallpaper_source"
                android:enabled="@{option.enabled}"
                android:orientation="vertical"
                style="@style/Layout_Item_Setting">

                <TextView
                    android:enabled="@{option.enabled}"
                    android:text="@string/wallpaper_source"
                    style="@style/Text.Title.Dark.Setting"/>

                <TextView
                    android:id="@+id/tv_wallpaper_source"
                    app:wallpaperSource="@{option}"
                    tools:text="All photos"
                    style="@style/Text.SubTitle.Dark.Setting"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wallpaper_set_type"
                android:enabled="@{option.enabled}"
                android:orientation="vertical"
                app:visible="@{Build.VERSION.SDK_INT >= Build.VERSION_CODES.N}"
                style="@style/Layout_Item_Setting">

                <TextView
                    android:enabled="@{option.enabled}"
                    android:text="@string/wallpaper_set_type"
                    style="@style/Text.Title.Dark.Setting"/>

                <TextView
                    android:id="@+id/tv_wallpaper_set_type"
                    app:wallpaperSetType="@{option.setType}"
                    tools:text="Home screen"
                    style="@style/Text.SubTitle.Dark.Setting"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wallpaper_period"
                android:enabled="@{option.enabled}"
                android:orientation="vertical"
                style="@style/Layout_Item_Setting">

                <TextView
                    android:enabled="@{option.enabled}"
                    android:text="@string/switch_period"
                    style="@style/Text.Title.Dark.Setting"/>

                <TextView
                    android:id="@+id/tv_wallpaper_period"
                    app:wallpaperPeriod="@{option.period}"
                    tools:text="30 minutes"
                    style="@style/Text.SubTitle.Dark.Setting"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wallpaper_only_wifi"
                android:enabled="@{option.enabled}"
                android:orientation="horizontal"
                style="@style/Layout_Item_Setting">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:enabled="@{option.enabled}"
                    android:text="@string/only_switch_under_wifi"
                    style="@style/Text.Title.Dark.Setting"/>

                <Switch
                    android:id="@+id/sw_wallpaper_only_wifi"
                    android:checked="@={option.onlyInWifi}"
                    android:enabled="@{option.enabled}"
                    style="@style/Switch.UnClick"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>